team-area & Anita Allen-area

--- a/public/index.html
+++ b/public/index.html
@@ -243,8 +243,8 @@
             </div>
         </section>
         <!-- Anita Allen-area -->
-        <section class="Anita Allen-area">
-            <div class="Anita Allen">
+        <section class="anita Allen-area">
+            <div class="anita Allen">
                 <div class="container mx-auto">
                     <div class="row grid xl:grid-cols-3">
                         <div class="mx-20 mt-20">
