footer-area-complate

--- a/public/index.html
+++ b/public/index.html
@@ -153,8 +153,8 @@
             <div class="services">
                 <div class="container mx-auto">
                     <div class="row mt-20 relative">
-                        <div class=" grid xl:grid-cols-2">
-                            <div class="bg-slate-200 px-40 pt-32">
+                        <div class="grid xl:grid-cols-2">
+                            <div class="bg-slate-200 xl:px-40 pt-32">
                                 <h2 class="text-5xl suvo">Services <br>
                                     We Provide</h2>
                                 <p class="text-base my-10 font-light"><span class="font-semibold mehedi">Lorem ipsum dolor sit
@@ -246,8 +246,8 @@
         <section class="anita Allen-area">
             <div class="anita Allen">
                 <div class="container mx-auto">
-                    <div class="row grid xl:grid-cols-3">
-                        <div class="mx-20 mt-20">
+                    <div class="row grid xl:grid-cols-3 mt-10">
+                        <div class="xl:mx-20 mt-20">
                             <h2 class="text-5xl suvo">Anita Allen</h2>
                             <h5 class="text-xl font-semibold">Graphic Designer</h5>
                             <p class="text-base font-light">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -279,24 +279,56 @@
         </section>
         <!-- next level area -->
         <section class="next-level-area">
-            <div class="next-level">
-                <div class="container">
-                    <div class="row">
-                        <div class="bg-gradient-to-r from-[#da803f] to-[#415299]">
-                            <div>
-                               
-                            </div>
+            <div class="next-level mt-24">
+                <div class="container mx-auto">
+                    <div class="row grid xl:grid-cols-2 gap-2 relative">
+                        <div class="bg-gradient-to-r from-[#da803f] to-[#415299]"></div>
+                        <div class="bg-slate-200 pt-52 pb-52 xl:text-left xl:pl-96 text-center">
+                           <h2 class="suvo text-3xl xl:pl-10">Take your website 
+                            to the next level</h2>
+                            <p class="font-light xl:pl-10"><span class="font-bold">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
-                        <div></div>
+                        <div class="bg-white xl:absolute top-32 left-96 p-24 pb-24 w-96">
+                            <h2 class="suvo text-5xl">Professional</h2>
+                            <h5 class="font-bold">Website Design</h5>
+                            <h3 class="text-7xl">$49.99</h3>
+                            <h2>Overview</h2>
+                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
+                         </div>
+                        <div class="bg-gradient-to-r from-[#da803f] to-[#415299] text-white xl:absolute top-32 left-2/4 p-24 pb-28 w-96">
+                            <h2 class="text-5xl">Our Best</h2>
+                            <h3 class="text-2xl text-center">feature</h3>
+                            <p class="mt-4"><i class="fa-solid fa-check mr-2"></i>Lorem ipsum dolor sit</p>
+                            <p class="mt-4"><i class="fa-solid fa-check mr-2"></i> consectetur adipiscing</p>
+                            <p class="mt-4"><i class="fa-solid fa-check mr-2"></i>ed do eiusmod tempor</p>
+                            <p class="mt-4"><i class="fa-solid fa-check mr-2"></i>ncididunt ut labore et</p>
+                            <p class="mt-4"><i class="fa-solid fa-check mr-2"></i>magna aliqua. Ut enim</p>
+                            <p class="mt-4"><i class="fa-solid fa-check mr-2"></i>minim veniam, quis ad</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Get in Touch -->
-        <section class="header-area">
-            <div class="header">
-                <div class="container">
-                    <div class="row"></div>
+        <section class="Get-in-Touch-area">
+            <div class="Get-in-Touch">
+                <div class="container mx-auto">
+                    <div class="row">
+                       <div class="bg-[url('pic/anila-bg-img.png')] bg-cover bg-center bg-no-repeat w-full text-center text-white">
+                         <div class="pt-14 pb-8">
+                            <h2 class="suvo text-5xl">Get in Touch</h2>
+                         </div> 
+                          <div class="flex justify-center gap-2 xl:gap-5 text-center pb-14 xl:text-2xl">
+                            <i class="fa-brands fa-facebook-f p-4 border border-white-560 rounded-full flex justify-center items-center"></i>
+                            <i class="fa-brands fa-google-plus-g p-4 border border-white-600 rounded-full flex justify-center items-center"></i>
+                            <i class="fa-brands fa-vk p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
+                            <i class="fa-brands fa-youtube p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
+                            <i class="fa-brands fa-linkedin-in p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
+                            <i class="fa-brands fa-digg p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
+                            <i class="fa-solid fa-person-hiking p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
+                         </div>
+                       </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -304,8 +336,46 @@
     <!-- footer-section -->
     <footer class="footer-area">
         <div class="footer">
-            <div class="container">
-                <div class="row"></div>
+            <div class="container mx-auto">
+                <div class="row xl:flex justify-around p-20">
+                    <div class="md:col-span-2 xl:col-span-1">
+                        <div class="row flex gap-5 items-center pb-5">
+                            <div class="col">
+                                <i class="fa-regular fa-envelope text-yellow-400 text-5xl"></i>
+                            </div>
+                            <div class="col">
+                                <h2 class="uppercase font-bold text-lg">Email</h2>
+                                <p class="text-sm">free@psdfreebies.com</p>
+                                <p class="text-sm">free@psdfreebies.comay</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="md:col-span-2 xl:col-span-1">
+                        <div class="row flex gap-5 items-center pb-5">
+                            <div class="col">
+                                <i class="fa-solid fa-mobile-screen text-yellow-400 text-5xl"></i>
+                            </div>
+                            <div class="col">
+                                <h2 class="uppercase font-bold text-lg">Call Us</h2>
+                                <p class="text-sm">+123 456 7890</p>
+                                <p class="text-sm">+123 456 7890</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="md:col-span-2 xl:col-span-1">
+                        <div class="row flex gap-5 items-center pb-5">
+                            <div class="col">
+                                <i class="fa-solid fa-location-dot text-yellow-400 text-5xl"></i>
+                            </div>
+                            <div class="col">
+                                <h2 class="uppercase font-bold text-lg">Address</h2>
+                                <p class="text-sm">123, Main Road, New City,</p>
+                                <p class="text-sm">My Country 123456</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p class="text-center text-2xl">Designed By PSDFreebies.com</p>
             </div>
         </div>
     </footer>
