--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative-Agency-Website-Template-PSD</title>
-    <link rel="shortcut icon" href="pic/header-pic-1.png" type="image/x-icon">
-    <link rel="stylesheet" href="font.css">
+    <link rel="shortcut icon" href="pic/header-pic-1.png" type="image/x-icon">    
     <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="font.css">
 
 </head>
 
@@ -211,33 +211,35 @@
                             <h2 class="text-5xl suvo">We are Perfect Team</h2>
                             <p class="w-4/5 mx-auto text-base my-10 font-light">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
                         </div>
-                        <div class="grid xl:grid-cols-5 xl:gap-8 bg-slate-300 px-20">
+                        <div class="bg-slate-200 rounded-md h-80 w-full mt-40"></div>
+                        <div class="grid xl:grid-cols-5 xl:gap-8 px-20 jeff">
                             <div class="">
-                              <img src="pic/team-1.png" class="w-full" alt="">
-                              <h2 class="text-2xl text-center font-medium">Jeff Norton</h2>
-                              <p class="text-center font-light">Graphic Designer</p>
+                            <img src="pic/team-1.png" class="w-full" alt="">
+                            <h2 class="text-2xl text-center font-medium pt-5">Jeff Norton</h2>
+                            <p class="text-center font-light">Graphic Designer</p>
                             </div>
                             <div class="">
-                              <img src="pic/team-2.png" class="w-full" alt="">
-                              <h2 class="text-2xl text-center font-medium">Anita Allen</h2>
-                              <p class="text-center font-light">Graphic Designer</p>
+                            <img src="pic/team-2.png" class="w-full" alt="">
+                            <h2 class="text-2xl text-center font-medium pt-5">Anita Allen</h2>
+                            <p class="text-center font-light">Graphic Designer</p>
                             </div>
                             <div class="">
-                             <img src="pic/team-3.png" class="w-full" alt="">
-                             <h2 class="text-2xl text-center font-medium">Jeff Norton</h2>
-                             <p class="text-center font-light">Graphic Designer</p>
+                            <img src="pic/team-3.png" class="w-full" alt="">
+                            <h2 class="text-2xl text-center font-medium pt-5">Jeff Norton</h2>
+                            <p class="text-center font-light">Graphic Designer</p>
                             </div>
                             <div class="">
                                 <img src="pic/team-4.png" class="w-full" alt="">
-                                <h2 class="text-2xl text-center font-medium">Anita Allen</h2>
+                                <h2 class="text-2xl text-center font-medium pt-5">Anita Allen</h2>
                                 <p class="text-center font-light">Graphic Designer</p>
                             </div>
                             <div class="">
                                 <img src="pic/team-5.png" class="w-full" alt="">
-                                <h2 class="text-2xl text-center font-medium">Jeff Norton</h2>
+                                <h2 class="text-2xl text-center font-medium pt-5">Jeff Norton</h2>
                                 <p class="text-center font-light">Graphic Designer</p>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -246,16 +248,16 @@
         <section class="anita Allen-area">
             <div class="anita Allen">
                 <div class="container mx-auto">
-                    <div class="row grid xl:grid-cols-3 mt-10">
-                        <div class="xl:mx-20 mt-20">
+                    <div class="row grid xl:grid-cols-3 mt-20">
+                        <div class="xl:mx-20 mt-20 px-5">
                             <h2 class="text-5xl suvo">Anita Allen</h2>
                             <h5 class="text-xl font-semibold">Graphic Designer</h5>
                             <p class="text-base font-light">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             <div class="mt-20">
                                 <ul>
-                                    <li class="my-14 relative before:content-[''] before:top-10 before:left-0 before:absolute before:bg-slate-400 before:w-full before:h-5 before:rounded-full after:content-[''] after:top-7 after:left-0 after:absolute after:bg-gradient-to-r from-[#da803f] to-[#415299] after:w-80 after:h-5 after:rounded-full">Creativity</li>
-                                    <li class="my-14 relative before:content-[''] before:top-10 before:left-0 before:absolute before:bg-slate-400 before:w-full before:h-5 before:rounded-full after:content-[''] after:top-7 after:left-0 after:absolute after:bg-gradient-to-r from-[#da803f] to-[#415299] after:w-80 after:h-5 after:rounded-full">Team work</li>
-                                    <li class="my-14 relative before:content-[''] before:top-10 before:left-0 before:absolute before:bg-slate-400 before:w-full before:h-5 before:rounded-full after:content-[''] after:top-7 after:left-0 after:absolute after:bg-gradient-to-r from-[#da803f] to-[#415299] after:w-80 after:h-5 after:rounded-full">Desiging</li>                                    
+                                    <li class="my-14 relative before:content-[''] before:top-10 before:left-0 before:absolute before:bg-slate-400 before:w-full before:h-5 before:rounded-full after:content-[''] after:top-7 after:left-0 after:absolute after:bg-gradient-to-r from-[#da803f] to-[#415299] after:w-80 after:h-5 after:rounded-full font-bold text-xl">Creativity <span class="pl-36 text-xl">80%</span></li>
+                                    <li class="my-14 relative before:content-[''] before:top-10 before:left-0 before:absolute before:bg-slate-400 before:w-full before:h-5 before:rounded-full after:content-[''] after:top-7 after:left-0 after:absolute after:bg-gradient-to-r from-[#da803f] to-[#415299] after:w-80 after:h-5 after:rounded-full font-bold text-xl">Team work <span class="pl-32 text-xl">80%</span></li>
+                                    <li class="my-14 relative before:content-[''] before:top-10 before:left-0 before:absolute before:bg-slate-400 before:w-full before:h-5 before:rounded-full after:content-[''] after:top-7 after:left-0 after:absolute after:bg-gradient-to-r from-[#da803f] to-[#415299] after:w-80 after:h-5 after:rounded-full font-bold text-xl">Desiging <span class="pl-36 text-xl">80%</span></li>                                    
                                 </ul>
                             </div>
                         </div>
@@ -264,13 +266,13 @@
                         </div>
                         <div class="bg-gradient-to-r from-[#da803f] to-[#415299] text-white p-20 flex flex-col justify-between">
                             <div>
-                                <h2 class="text-xl font-bold">Ut enim ad minim veniam, quis</h2>
-                                <p class="text-lg font-light">nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <h2 class="text-xl font-bold pb-4">Ut enim ad minim veniam, quis</h2>
+                                <p class="font-light">nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
-                            <div class="text-2xl text-black flex gap-5 mt-20">
-                                <i class="fa-brands fa-facebook-f p-5 bg-white rounded-full flex justify-center items-center "></i>
-                                <i class="fa-brands fa-google-plus-g p-5 bg-white rounded-full"></i>
-                                <i class="fa-solid fa-users p-5 bg-white rounded-full"></i>
+                            <div class="text-2xl text-black flex gap-5">
+                                <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f bg-white p-8 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                                <a href="https://www.googleplus.com"><i class="fa-brands fa-google-plus-g p-8 bg-white rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                                <a href="https://www.vk.com"><i class="fa-brands fa-vk p-8 bg-white rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
                             </div>
                         </div>
                     </div>
@@ -280,19 +282,20 @@
         <!-- next level area -->
         <section class="next-level-area">
             <div class="next-level mt-24">
-                <div class="container mx-auto">
+                <div class="">
                     <div class="row grid xl:grid-cols-2 gap-2 relative">
                         <div class="bg-gradient-to-r from-[#da803f] to-[#415299]"></div>
-                        <div class="bg-slate-200 pt-52 pb-52 xl:text-left xl:pl-96 text-center">
-                           <h2 class="suvo text-3xl xl:pl-10">Take your website 
+                        <div class="bg-slate-200 pt-52 pb-52 xl:text-left xl:pl-96 xl:px-7">
+                           <h2 class="suvo text-5xl xl:px-10 pb-6">Take your website <br>
                             to the next level</h2>
-                            <p class="font-light xl:pl-10"><span class="font-bold">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p class="font-bold pb-6 xl:pl-10">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <p class="font-light xl:pl-10">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
-                        <div class="bg-white xl:absolute top-32 left-96 p-24 pb-24 w-96">
-                            <h2 class="suvo text-5xl">Professional</h2>
-                            <h5 class="font-bold">Website Design</h5>
-                            <h3 class="text-7xl">$49.99</h3>
-                            <h2>Overview</h2>
+                        <div class="bg-white xl:absolute top-32 left-96 p-24 pb-24 w-96 professional xl:ml-48 text-center">
+                            <h2 class="suvo text-5xl pb-3">Professional</h2>
+                            <h5 class="font-bold pb-3">Website Design</h5>
+                            <h3 class="text-5xl doler">$49.99</h3>
+                            <h2 class="">Overview</h2>
                             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse</p>
                          </div>
                         <div class="bg-gradient-to-r from-[#da803f] to-[#415299] text-white xl:absolute top-32 left-2/4 p-24 pb-28 w-96">
@@ -311,21 +314,21 @@
         </section>
         <!-- Get in Touch -->
         <section class="Get-in-Touch-area">
-            <div class="Get-in-Touch">
-                <div class="container mx-auto">
+            <div class="Get-in-Touch bg-[url('pic/anila-bg-img.png')] bg-cover bg-center bg-no-repeat w-full">
+                <div class="w-full md:w-1/2 xl:w-1/3  mx-auto p-5">
                     <div class="row">
-                       <div class="bg-[url('pic/anila-bg-img.png')] bg-cover bg-center bg-no-repeat w-full text-center text-white">
+                       <div class=" text-center text-white">
                          <div class="pt-14 pb-8">
                             <h2 class="suvo text-5xl">Get in Touch</h2>
                          </div> 
-                          <div class="flex justify-center gap-2 xl:gap-5 text-center pb-14 xl:text-2xl">
-                            <i class="fa-brands fa-facebook-f p-4 border border-white-560 rounded-full flex justify-center items-center"></i>
-                            <i class="fa-brands fa-google-plus-g p-4 border border-white-600 rounded-full flex justify-center items-center"></i>
-                            <i class="fa-brands fa-vk p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
-                            <i class="fa-brands fa-youtube p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
-                            <i class="fa-brands fa-linkedin-in p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
-                            <i class="fa-brands fa-digg p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
-                            <i class="fa-solid fa-person-hiking p-4 border border-white-600 rounded-full flex justify-center items-center "></i>
+                          <div class="grid sm:grid-cols-4 xl:grid-cols-7 justify-center gap-2 xl:gap-5 text-center pb-14 xl:text-2xl grid-cols-3">
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                            <a href="https://www.googleplus.com"><i class="fa-brands fa-google-plus-g p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                            <a href="https://www.vk.com"><i class="fa-brands fa-vk p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                           <a href="https://www.youtube.com"><i class="fa-brands fa-youtube p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                            <a href="https://www.linkdin.com"><i class="fa-brands fa-linkedin-in p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                            <a href="https://www.person.com"><i class="fa-brands fa-digg p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
+                            <a href="https://www.person.com"><i class="fa-solid fa-person-hiking p-8 border border-white-60 rounded-full w-1 h-1 !flex justify-center items-center"></i></a>
                          </div>
                        </div>
                     </div>
@@ -341,10 +344,10 @@
                     <div class="md:col-span-2 xl:col-span-1">
                         <div class="row flex gap-5 items-center pb-5">
                             <div class="col">
-                                <i class="fa-regular fa-envelope text-yellow-400 text-5xl"></i>
+                                <i class="fa-regular fa-envelope text-yellow-300 text-5xl"></i>
                             </div>
                             <div class="col">
-                                <h2 class="uppercase font-bold text-lg">Email</h2>
+                                <a href="https://www.email.com"><h2 class="uppercase font-bold text-lg">Email</h2></a>
                                 <p class="text-sm">free@psdfreebies.com</p>
                                 <p class="text-sm">free@psdfreebies.comay</p>
                             </div>
@@ -353,10 +356,10 @@
                     <div class="md:col-span-2 xl:col-span-1">
                         <div class="row flex gap-5 items-center pb-5">
                             <div class="col">
-                                <i class="fa-solid fa-mobile-screen text-yellow-400 text-5xl"></i>
+                                <i class="fa-solid fa-mobile-screen text-yellow-300 text-5xl"></i>
                             </div>
                             <div class="col">
-                                <h2 class="uppercase font-bold text-lg">Call Us</h2>
+                                <a href="https://www.contact.com"><h2 class="uppercase font-bold text-lg">Call Us</h2></a>
                                 <p class="text-sm">+123 456 7890</p>
                                 <p class="text-sm">+123 456 7890</p>
                             </div>
@@ -365,17 +368,17 @@
                     <div class="md:col-span-2 xl:col-span-1">
                         <div class="row flex gap-5 items-center pb-5">
                             <div class="col">
-                                <i class="fa-solid fa-location-dot text-yellow-400 text-5xl"></i>
+                                <i class="fa-solid fa-location-dot text-yellow-300 text-5xl"></i>
                             </div>
                             <div class="col">
-                                <h2 class="uppercase font-bold text-lg">Address</h2>
+                                <a href="https://www.address.com"><h2 class="uppercase font-bold text-lg">Address</h2></a>
                                 <p class="text-sm">123, Main Road, New City,</p>
                                 <p class="text-sm">My Country 123456</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <p class="text-center text-2xl">Designed By PSDFreebies.com</p>
+                <p class="text-center pb-10">Designed By PSDFreebies.com</p>
             </div>
         </div>
     </footer>
